# ProjectOr

./: README.md
Page/: Compatibilite_IE.js  Page 2.html  Page.html  Page3.html  PageStyle.css  StyleSheet.css  big-data.rar
Perso/: fb alex.txt
Pkmn/: Mon équipe.docx  ~$n équipe.docx
Stage tek 3/: Soutenance stage tek3.pptx
audiowire/: AudioWire-tagreader  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  dependance_ubuntu.sh
audiowire-player/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  cmake_uninstall.cmake  dependance_ubuntu.sh
audiowire-player/src/: CMakeLists.txt  Makefile  cmake_install.cmake  pot.temp
audiowire-player/tests/: Makefile  cmake_install.cmake  main.cpp
audiowire/ext/AudioWire-tagreader/: CMakeLists.txt  Makefile  cmake_install.cmake
audiowire/ext/libAudioWire-spotifyblob/: CMakeLists.txt  Makefile  blobversion.h  cmake_install.cmake
audiowire/src/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  pot.temp  qrc_translations.cxx  ui_about.h  ui_addpodcastbyurl.h  ui_addpodcastdialog.h  ui_addstreamdialog.h  ui_albumcovermanager.h  ui_albumcoversearcher.h  ui_appearancesettingspage.h  ui_backgroundstreamssettingspage.h  ui_behavioursettingspage.h  ui_console.h  ui_coverfromurldialog.h  ui_coversearchstatisticsdialog.h  ui_deviceproperties.h  ui_digitallyimportedsettingspage.h  ui_dynamicplaylistcontrols.h  ui_edittagdialog.h  ui_equalizer.h  ui_equalizerslider.h  ui_errordialog.h  ui_fileview.h  ui_globalsearchsettingspage.h  ui_globalsearchview.h  ui_globalshortcutgrabber.h  ui_globalshortcutssettingspage.h  (+56 more)
minecraft/: banned-ips.txt  banned-players.txt  index.html  launch_serv.sh  server.log.1  server.properties  server.properties~  white-list.txt  white-list.txt~
mongo-api/: app.js  package.json
projet-rtype/: Makefile  main.cpp
serv_minecraft/: banned-players.txt  bukkit.yml  server.properties
(+1133 files in other folders)
